completata gestione magazzino

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -24,7 +24,7 @@
             <td th:text="${g.id}"></td>
             <td th:text="${g.title}"></td>
             <td th:text="${g.price}"></td>
-            <td th:text="${g.restocks}"></td>
+            <td th:text="${g.getTotalQuantity()}"></td>
 
             <td>
                 <a class="btn btn-primary small" th:href="@{/edit/{id}(id=${g.id})}"><i
