--- a/src/main/resources/templates/restock.html
+++ b/src/main/resources/templates/restock.html
@@ -5,13 +5,14 @@
 <body>
 <nav th:replace="fragments/navbar"></nav>
 <div class="container mt-5">
+    <h1 th:text="|Assortimento: ${game.title}|"></h1>
     <form
             id="restock-form"
             th:action="@{/admin/add/{gameId}(gameId=${game.id})}"
             th:object="${restock}"
             method="post"
     >
-        <input type="hidden" id="gameId" name="gameId" th:value="${game.id}" />
+        <input type="hidden" th:field="*{videogame}" />
 
         <div class="row g-3">
             <div class="col-md-4">
