--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -34,157 +34,59 @@
 
         </div>
 
-        <h1 class="text-center mt-5">PLAYSTATION</h1>
-        <div class="row">
-            <div class="col-4">
-                <img src="ps5-left.jpeg">
-            </div>
+        <th:block th:each="entry : ${consoleMap}"
+                  th:with="tagId = |carouselPlay${entry.key.id}|,imageName = ${entry.key.id == 1 || entry.key.id == 2} ? 'ps5' : (${entry.key.id == 3} ? 'switch' : 'xbox')"
 
-            <div class="col-4 p-5">
-                <div class="carousel slide" id="carouselPlay">
-                    <div class="carousel-inner"
-                    >
-                        <th:block th:each="map,status : ${consoleMap}">
+        >
+
+            <h1 th:text="${entry.key.console}" class="text-center mt-5"></h1>
+            <div class="row">
+                <div class="col-4">
+                    <img th:src="|${imageName}-left.jpeg|">
+                </div>
+
+                <div class="col-4 p-5">
+                    <div class="carousel slide" th:id="${tagId}">
+                        <div class="carousel-inner"
+                        >
+
                             <div class="carousel-item"
+                                 th:each=" game,status : ${entry.value}"
                                  th:classappend="${status.index == 0} ? 'active' : ''"
-                                 th:if="${map.key.getId() == 1 or map.key.getId() == 2}"
 
                             >
-                                <div th:each=" entry : ${map.value}">
+                                <div>
                                     <img alt="game-img" class="img-fluid border border-secondary"
-                                         th:src="${entry.photo}">
+                                         th:src="${game.photo}">
                                     <p></p>
-                                    <a class="btn btn-primary" th:href="@{/show/{id}(id=${entry.id})}">
+                                    <a class="btn btn-primary" th:href="@{/show/{id}(id=${game.id})}">
                                         Dettagli
                                     </a>
                                 </div>
 
                             </div>
 
-                        </th:block>
+
+                        </div>
+                        <button th:attr="data-bs-target=|#${tagId}|" class="carousel-control-prev opacity-100"
+                                data-bs-slide="prev"
+                                type="button">
+                            <span class="carousel-control-prev-icon"></span>
+                        </button>
+                        <button th:attr="data-bs-target=|#${tagId}|" class="carousel-control-next opacity-100"
+                                data-bs-slide="next"
+                                type="button">
+                            <span class="carousel-control-next-icon"></span>
+                        </button>
 
                     </div>
-                    <button class="carousel-control-prev opacity-100" data-bs-slide="prev"
-                            data-bs-target="#carouselPlay"
-                            type="button">
-                        <span class="carousel-control-prev-icon"></span>
-                    </button>
-                    <button class="carousel-control-next opacity-100" data-bs-slide="next"
-                            data-bs-target="#carouselPlay"
-                            type="button">
-                        <span class="carousel-control-next-icon"></span>
-                    </button>
+                </div>
 
+                <div class="col-4">
+                    <img th:src="|${imageName}-right.jpeg|">
                 </div>
             </div>
-
-            <div class="col-4">
-                <img src="ps5-right.jpeg">
-            </div>
-        </div>
-
-        <h1 class="text-center mt-5">NINTENDO SWITCH</h1>
-
-        <div class="row">
-            <div class="col-4">
-                <img src="switch-left.jpg">
-            </div>
-
-
-            <div class="col-4 p-5">
-                <div class="carousel slide" id="carouselSwitch">
-                    <div class="carousel-inner"
-                    >
-                        <th:block th:each="map,status : ${consoleMap}">
-                            <div class="carousel-item"
-                                 th:classappend="${status.index == 0} ? 'active' : ''"
-                                 th:if="${map.key.getId() == 3}"
-
-                            >
-                                <div th:each=" entry : ${map.value}">
-                                    <img alt="game-img" class="img-fluid border border-secondary"
-                                         th:src="${entry.photo}">
-                                    <p></p>
-                                    <a class="btn btn-primary" th:href="@{/show/{id}(id=${entry.id})}">
-                                        Dettagli
-                                    </a>
-                                </div>
-
-                            </div>
-
-                        </th:block>
-
-                    </div>
-                    <button class="carousel-control-prev opacity-100" data-bs-slide="prev"
-                            data-bs-target="#carouselSwitch"
-                            type="button">
-                        <span class="carousel-control-prev-icon"></span>
-                    </button>
-                    <button class="carousel-control-next opacity-100" data-bs-slide="next"
-                            data-bs-target="#carouselSwitch"
-                            type="button">
-                        <span class="carousel-control-next-icon"></span>
-                    </button>
-
-                </div>
-            </div>
-
-            <div class="col-4">
-                <img src="switch-right.jpg">
-            </div>
-        </div>
-
-
-        <h1 class="text-center mt-5">XBOX</h1>
-
-        <div class="row">
-            <div class="col-4">
-                <img src="xbox-left.jpeg">
-            </div>
-
-
-            <div class="col-4 p-5">
-                <div class="carousel slide" id="carouselX">
-                    <div class="carousel-inner"
-                    >
-                        <th:block th:each="map,status : ${consoleMap}">
-                            <div class="carousel-item"
-                                 th:classappend="${status.index == 0} ? 'active' : ''"
-                                 th:if="${map.key.getId() == 4}"
-
-                            >
-                                <div th:each=" entry : ${map.value}">
-                                    <img alt="game-img" class="img-fluid border border-secondary"
-                                         th:src="${entry.photo}">
-                                    <p></p>
-                                    <a class="btn btn-primary" th:href="@{/show/{id}(id=${entry.id})}">
-                                        Dettagli
-                                    </a>
-                                </div>
-
-                            </div>
-
-                        </th:block>
-
-                    </div>
-                    <button class="carousel-control-prev opacity-100" data-bs-slide="prev"
-                            data-bs-target="#carouselX"
-                            type="button">
-                        <span class="carousel-control-prev-icon"></span>
-                    </button>
-                    <button class="carousel-control-next opacity-100" data-bs-slide="next"
-                            data-bs-target="#carouselX"
-                            type="button">
-                        <span class="carousel-control-next-icon"></span>
-                    </button>
-
-                </div>
-            </div>
-
-            <div class="col-4">
-                <img src="xbox-right.jpeg">
-            </div>
-        </div>
+        </th:block>
 
         <h1 class="text-center my-3">I PIU' VENDUTI</h1>
         <div class="carousel slide p-5" id="carouselMax">
