--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -32,7 +32,7 @@
                     <p class="card-text" th:text="${game.description}"></p>
                     <p class="card-text" th:text="|Prezzo: €${game.price}|"></p>
                     <div class="d-flex align-items-center">
-                        <a class="btn btn-black border-black mx-2 " th:href="@{/purchase/create}"><i
+                        <a class="btn btn-black border-black mx-2 " th:href="@{/purchase/create/{id}(id=${game.id})}"><i
                                 class="fa-solid fa-cart-shopping"></i></a>
                     </div>
                 </div>
