sistemato homepage e footer

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<footer class="text-center text-dark py-3" style="background-color: #F8F9FA;">
+<footer class="text-center text-dark" style="background-color: #F8F9FA;">
     <div class="container">
         <p class="my-0">&copy; 2023 <a class="text-dark fw-bold" style="text-decoration: none;"
                                        th:href="@{/}">fando<span
