--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,7 +5,7 @@
 <body>
 <nav th:replace="fragments/navbar"></nav>
 
-<div class="container mt-3">
+<div class="container  my-5 mt-lg-5 bg-light">
     <table class="table">
         <thead>
         <tr>
