--- a/src/main/resources/templates/restock.html
+++ b/src/main/resources/templates/restock.html
@@ -6,7 +6,7 @@
 <nav th:replace="fragments/navbar"></nav>
 
 <div class="container my-5 mt-lg-5 bg-light">
-    <div class="container mt-5" >
+    <div class="container mt-5">
         <h1 th:text="|Assortimento: ${game.title}|"></h1>
         <form
                 id="restock-form"
@@ -14,7 +14,7 @@
                 th:object="${restock}"
                 method="post"
         >
-            <input type="hidden" th:field="*{videogame}" />
+            <input type="hidden" th:field="*{videogame}"/>
 
             <div class="row g-3">
                 <div class="col-md-4">
@@ -72,7 +72,7 @@
 </div>
 
 
-<footer th:replace="fragments/footer">
+<footer th:replace="fragments/footer"></footer>
 
 </body>
 </html>
