--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -34,7 +34,8 @@
                 </div>
                 <div class="card-footer bg-white border-top-0 mb-1">
                     <div class="d-flex align-items-center">
-                        <a class="btn btn-black border-black mx-2 " th:href="@{/purchase/create}"><i
+                        <a class="btn btn-black border-black mx-2 "
+                           th:href="@{/purchase/create/{id}(id=${game.id}) }"><i
                                 class="fa-solid fa-cart-shopping"></i></a>
                     </div>
                 </div>
