--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -17,8 +17,8 @@
         <input type="hidden" th:field="*{videogame}">
         <input type="hidden" th:field="*{dateTime}">
         <div class="form-group col-4">
-            <label for="userId">Seleziona un utente per l'acquisto:</label>
-            <select class="form-control" id="userId" name="userId">
+            <label for="selectedUser">Seleziona un utente per l'acquisto:</label>
+            <select class="form-control" id="selectedUser" name="selectedUser">
                 <option selected>- Nessuno</option>
                 <option th:each="user : ${users}" th:value="${user.id}"
                         th:text="|${user.name} ${user.lastName}|"></option>
