--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -47,8 +47,9 @@
             <td>
                 <form method="post" th:action="@{/delete/{id}(id=${g.id})}">
                 <button class="btn btn-danger" type="submit"><i
-                        class="fa-solid fa-trash"></i></button>
-            </form></td>
+                        class="fa-solid fa-trash"></i></button></form>
+            </td>
+
         </tr>
         </tbody>
     </table>
