Changed logo and color buttons

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -28,7 +28,7 @@
         <dd th:text="${users.email}"></dd>
     </dl>
 
-    <a th:href="@{/}" class="btn btn-primary">Continua ad acquistare!</a>
+    <a th:href="@{/}" class="btn btn-success">Continua ad acquistare!</a>
 
 </div>
 
