--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -23,7 +23,7 @@
                     <h5 class="card-title" th:text="${game.title}"></h5>
                     <div class="d-flex ">
                         <div th:each="c : ${game.consoleList}">
-                            <span class="bold badge badge-pill secondary bg-secondary text-white mr-3"
+                            <span class="bold badge badge-pill secondary bg-secondary text-white mr-3 mx-1"
                                   th:text="${c.console}"></span>
                         </div>
                     </div>
