--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,10 +11,9 @@
 
 <footer class="text-center text-dark" style="background-color: #F8F9FA;">
     <div class="container">
-        <p class="my-0">&copy; 2023 <a class="text-dark fw-bold" style="text-decoration: none;"
-                                       th:href="@{/}">fando<span
-                class="text-primary font-weight-bold">games</span></a> All
-            rights reserved.</p>
+        <p class="navbar-brand fw-bold" th:href="@{/}">@2023<b> Game</b><span style="color: green">Spring</span> All
+            rights
+            reserved</p>
     </div>
 </footer>
 
