--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold" th:href="@{/}">fando<span class="text-primary">games</span></a>
+        <a class="navbar-brand fw-bold" th:href="@{/}"><b>Game</b><span style="color: green">Spring</span></a>
         <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler"
                 data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
@@ -20,22 +20,23 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a aria-current="page" class="nav-link active" th:href="@{/}"> <i class="fa-solid fa-house"
-                                                                                      style="color: #0042aa;"></i> Home</a>
+                                                                                      style="color: green;"></i>
+                        Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/login}"> <i class="fa-solid fa-user px-1" style="color: #0042aa;"
+                    <a class="nav-link" th:href="@{/login}"> <i class="fa-solid fa-user px-1" style="color: green;"
                                                                 th:href="@{/login}"></i> Accedi
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin}"><i class="fa-solid fa-screwdriver-wrench px-1"
-                                                               style="color: #0042aa;"></i> Area Riservata</a>
+                                                               style="color: green;"></i> Area Riservata</a>
                 </li>
             </ul>
 
             <form class="d-flex" role="search">
                 <input aria-label="Search" class="form-control me-2" placeholder="Cerca" type="search">
-                <button class="btn btn-outline-primary" type="submit">Search</button>
+                <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
         </div>
     </div>
