--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -36,7 +36,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary my-2">Acquista
+        <button type="submit" class="btn btn-success my-2">Acquista
         </button>
     </form>
 
