--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -16,6 +16,8 @@
     >
         <input type="hidden" th:field="*{videogame}">
         <input type="hidden" th:field="*{dateTime}">
+
+
         <div class="form-group col-4">
             <label for="selectedUser">Seleziona un utente per l'acquisto:</label>
             <select class="form-control" id="selectedUser" name="selectedUser">
@@ -25,7 +27,8 @@
             </select>
         </div>
 
-        <div class="form-group col-2 mt-2">
+
+        <div class="form-group col-2">
             <label for="quantity">Quantità:</label>
             <input type="number" class="form-control " id="quantity" name="quantity" th:field="*{quantity}"
                    th:errorClass="is-invalid">
@@ -35,6 +38,7 @@
                 </ul>
             </div>
         </div>
+
 
         <button type="submit" class="btn btn-success my-2">Acquista
         </button>
