--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -29,8 +29,8 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/admin}"><i class="fa-solid fa-screwdriver-wrench px-1"
-                                                               style="color: green;"></i> Area Riservata</a>
+                    <a class="nav-link" th:href="@{/storage}"><i class="fa-solid fa-screwdriver-wrench px-1"
+                                                                 style="color: green;"></i> Area Riservata</a>
                 </li>
             </ul>
 
