--- a/src/main/resources/templates/storage.html
+++ b/src/main/resources/templates/storage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head('Admin')"></head>
+<head th:replace="fragments/head :: head('Storage')"></head>
 
 <body>
 <nav th:replace="fragments/navbar"></nav>
@@ -26,7 +26,7 @@
             <td th:text="${g.price}"></td>
 
             <td th:if="${g.getTotalQuantity() < 10}">
-                <a  class="btn btn-danger small" th:href="@{/admin/add/{id}(id=${g.id})}" >
+                <a  class="btn btn-danger small" th:href="@{/storage/add/{id}(id=${g.id})}" >
                     Rifornimento Urgente <span th:text="${g.getTotalQuantity()}" class="badge text-bg-secondary"></span>
                 </a>
             </td>
@@ -41,7 +41,7 @@
             </td>
 
             <td>
-                <a class="btn btn-primary small" th:href="@{/admin/add/{id}(id=${g.id})}"><i
+                <a class="btn btn-primary small" th:href="@{/storage/add/{id}(id=${g.id})}"><i
                         class="fa-solid fa-box-open"></i></a>
             </td>
             <td>
