--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -18,7 +18,7 @@
     <p th:text="${exception}"></p>
     <p th:text="${trace}"></p>
     <div class="my-5">
-        <a th:href="@{/}" class="btn btn-primary">Torna indietro</a>
+        <a th:href="@{/}" class="btn btn-success">Torna indietro</a>
     </div>
 </div>
 
