--- a/src/main/resources/templates/restock.html
+++ b/src/main/resources/templates/restock.html
@@ -53,7 +53,7 @@
             </div>
 
             <div class="col-12 my-2 text-center">
-                <button class="btn btn-primary" type="submit">Acquista
+                <button class="btn btn-success" type="submit">Acquista
                 </button>
             </div>
 
@@ -61,7 +61,7 @@
 
     </div>
 
-    <div class="container mt-5">
+    <div class="container mt-5 pb-3">
         <table class="table">
             <thead>
             <h1>Cronologia assortimenti</h1>
@@ -84,9 +84,6 @@
     </div>
 
 
-</div>
-
-<div class="container mb-5 pb-5">
 </div>
 
 
