--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -33,6 +33,11 @@
                             class="fa-solid fa-screwdriver-wrench px-1"
                             style="color: green;"></i> Area Riservata</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/user}" sec:authorize="hasAuthority('USER')"><i
+                            class="fa-solid fa-screwdriver-wrench px-1"
+                            style="color: green;"></i>Profilo</a>
+                </li>
             </ul>
 
             <form class="d-flex" role="search">
