--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org">
 
 <head th:replace="fragments/head :: head('dettagli videogioco')"></head>
 
@@ -33,7 +33,7 @@
                     <p class="card-text" th:text="|Prezzo: €${game.price}|"></p>
                 </div>
                 <div class="card-footer bg-white border-top-0 mb-1">
-                    <div class="d-flex align-items-center">
+                    <div class="d-flex align-items-center" sec:authorize="hasAuthority('USER')">
                         <a class="btn btn-black border-black mx-2 "
                            th:href="@{/purchase/create/{id}(id=${game.id}) }"><i
                                 class="fa-solid fa-cart-shopping"></i></a>
