--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -56,31 +56,33 @@
                             <h3>I miei acquisti:</h3>
 
 
-                                <div class="carousel slide p-5" id="carouselExample">
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item" th:classappend="${status.index == 0} ? 'active' : ''"
-                                             th:each="p,status : ${user.purchases}">
-                                            <img th:src="${p.videogame.photo}">
-                                            <dl>
-                                                <dt>Quantità</dt>
-                                                <dd th:text="${p.quantity}"></dd>
-                                                <dt>Totale</dt>
-                                                <dd th:text="|${p.getTotalPrice()}€|"></dd>
-                                                <dt>Data</dt>
-                                                <dd th:text="${p.dateTime}"></dd>
-                                            </dl>
-                                        </div>
+                            <div class="carousel slide p-5" id="carouselExample">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item" th:classappend="${status.index == 0} ? 'active' : ''"
+                                         th:each="p,status : ${user.purchases}">
+                                        <img th:src="${p.videogame.photo}">
+                                        <dl>
+                                            <dt>Quantità</dt>
+                                            <dd th:text="${p.quantity}"></dd>
+                                            <dt>Totale</dt>
+                                            <dd th:text="|${p.getTotalPrice()}€|"></dd>
+                                            <dt>Data</dt>
+                                            <dd th:text="${p.dateTime}"></dd>
+                                        </dl>
                                     </div>
-                                    <div class="d-flex align-items-center">
-                                        <button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExample" type="button">
-                                            <span class="carousel-control-prev-icon bg-success"></span>
-                                        </button>
-                                        <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExample" type="button">
-                                            <span class="carousel-control-next-icon bg-success"></span>
-                                        </button>
-                                    </div>
-
                                 </div>
+                                <div class="d-flex align-items-center">
+                                    <button class="carousel-control-prev" data-bs-slide="prev"
+                                            data-bs-target="#carouselExample" type="button">
+                                        <span class="carousel-control-prev-icon bg-success"></span>
+                                    </button>
+                                    <button class="carousel-control-next" data-bs-slide="next"
+                                            data-bs-target="#carouselExample" type="button">
+                                        <span class="carousel-control-next-icon bg-success"></span>
+                                    </button>
+                                </div>
+
+                            </div>
 
 
                         </div>
@@ -88,14 +90,10 @@
                 </div>
 
 
-
-
             </div>
         </div>
     </section>
-
-
-
+</main>
 
 
 <footer th:replace="fragments/footer"></footer>
