--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -30,6 +30,8 @@
         <dd th:text="${users.birthday}"></dd>
         <dt>Email</dt>
         <dd th:text="${users.email}"></dd>
+        <dt>Indirizzo di Spedizione</dt>
+        <dd th:text="${users.address}"></dd>
     </dl>
 
     <a th:href="@{/}" class="btn btn-success">Continua ad acquistare!</a>
