--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -5,7 +5,7 @@
 
 <body class="d-flex flex-column" style="min-height: 100vh;">
 
-<nav th:replace="fragments/navbar :: navbar"></nav>
+<nav th:replace="fragments/navbar :: navbar(area='profile')"></nav>
 
 <div class="container flex-grow-1">
     <h1 class="text-center my-5">Dettagli Videogioco</h1>
