--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -8,8 +8,7 @@
 <body>
 
 <main>
-    <nav th:replace="fragments/navbar :: navbar"></nav>
-
+    <nav th:replace="fragments/navbar :: navbar(area='area riservata')"></nav>
     <div class="container my-5 mt-lg-5 bg-light">
 
         <h1 class="mx-5 text-center"
