--- a/src/main/resources/templates/restock.html
+++ b/src/main/resources/templates/restock.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/head :: head('Admin')"></head>
 
 <body>
-<nav th:replace="fragments/navbar"></nav>
+<nav th:replace="fragments/navbar :: navbar(area='area riservata')"></nav>
 
 <div class="container my-5 mt-lg-5 bg-light">
     <div class="container mt-5">
