--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -5,7 +5,7 @@
 <body>
 
 <main>
-    <nav th:replace="fragments/navbar :: navbar"></nav>
+    <nav th:replace="fragments/navbar :: navbar(area='homepage')"></nav>
 
 
     <div class="container my-5 mt-lg-5 text-center">
