--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,7 +4,7 @@
 
 
 <body>
-<nav th:replace="fragments/navbar :: navbar"></nav>
+<nav th:replace="fragments/navbar :: navbar(area='profile')"></nav>
 
 <header>
     <div class="p-5 mb-4 bg-success bg-gradient">
