--- a/src/main/resources/templates/purchase.html
+++ b/src/main/resources/templates/purchase.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" th:href="@{styles.css}"/>
 </head>
 <body>
-<nav th:replace="fragments/navbar :: navbar"></nav>
+<nav th:replace="fragments/navbar :: navbar(area='profile')"></nav>
+
 <div class="container my-3">
     <h1 class="mb-3">Completa l'acquisto!</h1>
     <form
@@ -19,9 +20,8 @@
 
 
         <div class="form-group col-4">
-            <label for="selectedUser">Seleziona l'indirizzo di spedizione:</label>
+            <label for="selectedUser">Conferma l'indirizzo di spedizione:</label>
             <select class="form-control" id="selectedUser" name="selectedUser">
-                <option selected>- Nessuno</option>
                 <option th:each="user : ${users}" th:value="${user.id}"
                         th:text="${user.address}"></option>
             </select>
@@ -30,7 +30,7 @@
 
         <div class="form-group col-2">
             <label for="quantity">Quantità:</label>
-            <input type="number" class="form-control " id="quantity" name="quantity" th:field="*{quantity}"
+            <input type="number" min="1" class="form-control " id="quantity" name="quantity" th:field="*{quantity}"
                    th:errorClass="is-invalid">
             <div class="invalid-feedback" th:if="${#fields.hasErrors('quantity')}">
                 <ul>
