--- a/src/main/resources/templates/storage.html
+++ b/src/main/resources/templates/storage.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/head :: head('Storage')"></head>
 
 <body>
-<nav th:replace="fragments/navbar"></nav>
+<nav th:replace="fragments/navbar :: navbar(area='area riservata')"></nav>
 
 <div class="text-center my-3">
     <h1>Magazzino </h1>
